Fix too high line height on sites titles

--- a/src/sass/site/_text.scss
+++ b/src/sass/site/_text.scss
@@ -1,7 +1,7 @@
 .site__title {
-  font-family: 'Baloo';
-  font-weight: 400;
-  font-size: 2.6rem;
+  margin: .1em 0;
+
+  font: 400 2.6rem / 1.2 'Baloo';
 
   color: v(site-accent, v(site-primary));
 
